Update cluster config template in ossec.conf

--- a/framework/wazuh/core/tests/data/configuration/ossec.conf
+++ b/framework/wazuh/core/tests/data/configuration/ossec.conf
@@ -5,17 +5,16 @@
 -->
 <ossec_config>
     <cluster>
-        <name>wazuh</name>
         <node_name>master-node</node_name>
         <node_type>master</node_type>
-        <key>9d273b53510fef702b54a92e9cffc82e</key>
         <port>1516</port>
         <bind_addr>0.0.0.0</bind_addr>
+        <certfile>/var/ossec/etc/sslmanager.cert</certfile>
+        <keyfile>/var/ossec/etc/sslmanager.key</keyfile>
         <nodes>
             <node>wazuh-master</node>
         </nodes>
         <hidden>note !note!note</hidden>
-        <disabled>no</disabled>
     </cluster>
     <integration>
         <node>wazuh-master</node>
