--- a/api/api/spec/spec.yaml
+++ b/api/api/spec/spec.yaml
@@ -8661,10 +8661,8 @@ paths:
                         ssl_manager_key: "etc/sslmanager.key"
                         ssl_auto_negotiate: "no"
                       cluster:
-                        name: "wazuh"
                         node_name: "master-node"
                         node_type: "master"
-                        key: "9d273b53510fef702b54a92e9cffc82e"
                         port: "1516"
                         bind_addr:
                           - "0.0.0.0"
@@ -9512,17 +9510,17 @@ paths:
               example:
                 data:
                   affected_items:
-                    - name: "wazuh"
-                      node_name: "master-node"
+                    - node_name: "master-node"
                       node_type: "master"
-                      key: "9d273b53510fef702b54a92e9cffc82e"
                       port: 1516
                       bind_addr:
                         - "0.0.0.0"
                       nodes:
                         - "wazuh-master"
                       hidden: "no"
-                      disabled: "false"
+                      certfile: "/var/ossec/etc/sslmanager.cert"
+                      keyfile: "/var/ossec/etc/sslmanager.key"
+                      keyfile_password: ""
                   total_affected_items: 1
                   total_failed_items: 0
                   failed_items: []
